# advanced-rag-lecture

./: .gitignore  README.md  SLIDES.md  evaluation.py  main.py  pyproject.toml  rag_baseline.py  rag_hyde.py  rag_multihop_demo.py  rag_self_corrective.py  requirements.txt  story_corpus.py  toy_corpus.py
docs/: 01_main_explained.md  02_toy_corpus_explained.md  03_evaluation_explained.md  04_rag_baseline_explained.md  05_rag_hyde_explained.md  06_rag_multihop_explained.md  07_rag_self_corrective_explained.md
lecture/: 01_setup.py  02_embeddings.py  03_baseline_rag.py  04_hyde_rag.py  05_self_corrective_rag.py  06_evaluation.py  07_ragas_evaluation.py  08_production_rag.py  README.md  app.py  vector_store.py
lecture/docs/: 01_setup.md  02_embeddings.md  03_baseline_rag.md  04_hyde_rag.md  05_self_corrective_rag.md  06_evaluation.md  07_ragas_evaluation.md  08_production_rag.md  vector_store.md
